--- a/index.Rmd
+++ b/index.Rmd
@@ -699,7 +699,7 @@ L'open data est comme la Tour de Pise : un très bel édifice posé sur des fond
 
 ???
 
-La notation RTI (Rght to information) est le principal outil mondial pour évaluer la solidité des cadres juridiques nationaux d'accès aux informations détenues par les autorités publiques (ou le droit à l'information, RTI). Il est largement utilisé par les organisations intergouvernementales, les défenseurs de la RTI, les réformateurs, les législateurs et autres.
+La notation RTI (Right to information) est le principal outil mondial pour évaluer la solidité des cadres juridiques nationaux d'accès aux informations détenues par les autorités publiques (ou le droit à l'information, RTI). Il est largement utilisé par les organisations intergouvernementales, les défenseurs de la RTI, les réformateurs, les législateurs et autres.
 
 ---
 ### Les conditions d'exercice du droit d'accès
@@ -838,7 +838,7 @@ class: inverse, center, middle
   - réseau des AMDAC
   - ANCT et réseau des chargés de mission numérique des SGAR
   - collectivités territoriales
-  - CNIL
+  - CADA
   - régulateurs sectoriels (exemple : ART pour les dispositions de la loi LOM)
   - conseil national de l'information géolocalisée
 
@@ -852,8 +852,8 @@ class: inverse, center, middle
 ---
 ## Les données 
   - service public de la donnée
-  - données d'intérêt général
   - données publiques
+  - données d'intérêt général
 
 ---
 ## Les réutilisateurs 
